# dllogger

./: CONTRIBUTING.md  README.md  setup.cfg  setup.py
dllogger/: __init__.py  logger.py
examples/: example_resnet_log.json
