[metadata]
# replace with your username:
name = nvidia-dllogger
version = 0.1.1
author = NVIDIA Corporation
description = NVIDIA DLLogger - logging for Deep Learning applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVIDIA/dllogger
license = Apache 2.0
license_file= LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    License :: OSI Approved :: Apache2

[options]
package_dir =
    = ./
packages = dllogger
python_requires = >=3.5